# alertify

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  config.example.en.toml  config.example.rus.toml  config.example.toml  config.toml
src/: battery.rs  config.rs  cpu.rs  main.rs  memory.rs  message.rs  network.rs  storage.rs  test.rs  udev.rs  utils.rs
