[package]
name = "alertify"
version = "0.1.4"
edition = "2021"
authors = ["arelive <me@are.moe>"]
description = "Notification tool for battery, memory, storage, devices and power supply state monitoring on Linux"
license = "MIT"
repository = "https://github.com/arebaka/alertify"

[dependencies]
anyhow = "1.0"
dirs = "6.0.0"
futures-util = "0.3.31"
humansize = "2.1.3"
notify-rust = "4.5"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.35"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
tokio-udev = "0.9"
toml = "0.5"
zbus = { version = "5.7", features = ["tokio"] }
zbus_names = "4.2"

[build-dependencies]

[features]
default = []

[[bin]]
name = "alertify"
path = "src/main.rs"
